--- a/src/app/client/menubar/menubar.component.html
+++ b/src/app/client/menubar/menubar.component.html
@@ -12,7 +12,7 @@
   </li>
 
   <li class="nav-item">
-    <a class="nav-link active"routerLink="/RxHistoryClient"><span class="fa fa-folder-open" style="color:white E;font-size:25px "></span> &nbsp; Rx History</a>
+    <a class="nav-link active"routerLink="/HomePageClient/RxHistoryClient"><span class="fa fa-folder-open" style="color:white E;font-size:25px "></span> &nbsp; Rx History</a>
 
   </li>
 
@@ -24,7 +24,7 @@
   </li>
   <li style="position: absolute;
   bottom: 0;  font-size: large">
-    <a class="nav-link active"routerLink="/Pharmacies"><span class="fa fa-power-off"style="color:white E;font-size:25px "></span>&nbsp;Sign out </a>
+    <a class="nav-link active"(click)='logout($event)'><span class="fa fa-power-off"style="color:white E;font-size:25px "></span>&nbsp;Sign out </a>
   </li>
 </ul>
 </div>
