--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -24,7 +24,7 @@
                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"style="color:white" ><i class="fa fa-user" style="color:white"></i> Profile </a>
                    <div style="height:auto" class="dropdown-menu dropdown-menu-right dropdown-cyan" aria-labelledby="navbarDropdownMenuLink-4">
                        <a class="dropdown-item" routerLink='/profil'>My Account</a>
-                       <a class="dropdown-item"  href="login" (click)="logout($event)" *ngIf="loggedIn">Sign Out</a>
+                       <a class="dropdown-item"  href="login" (click)="logout($event)" >Sign Out</a>
                    </div>
                </li>
            </ul>
