--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-<div class="logo"*ngIf="loggedIn"  >
+<div class="logo"  >
 <a href="#">
     <img src="assets/img/login2.png" style="height: 50px; margin-left: 35px;"/>
 </a></div>
-<div class="leftMenu"  *ngIf="loggedIn">
-<ul class="nav flex-column"  *ngIf="loggedIn">
+<div class="leftMenu">
+<ul class="nav flex-column"  >
 
   <li class="nav-item">
     <a class="nav-link active"routerLink="/HomePage"><span class="fa fa-home" style="color:white E;font-size:25px; "></span>&nbsp;Home Page</a>
