--- a/src/app/SuperViseur/pet-owners/profil-pet-owner/profil-pet-owner.component.html
+++ b/src/app/SuperViseur/pet-owners/profil-pet-owner/profil-pet-owner.component.html
@@ -1,6 +1,6 @@
-<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePage"> Dashbord</a>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePageVet"> Dashbord</a>
 <br>
-<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/PetOwners" >PetOwner List </a>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePageVet/PetOwners" >PetOwner List </a>
 
 <div class="all2"*ngIf="!edite">
   <form id='form'*ngIf="!edite" style="color:#123C69" >
