--- a/src/app/SuperViseur/pharmacy/add-pharamcist/add-pharamcist.component.html
+++ b/src/app/SuperViseur/pharmacy/add-pharamcist/add-pharamcist.component.html
@@ -1,8 +1,8 @@
 
 <div class="containt">
-  <span class="fa fa-arrow-left" style="color: #123C69"></span><a routerLink="/HomePage"> Dashbord</a>
+  <span class="fa fa-arrow-left" style="color: #123C69"></span><a routerLink="/HomePageVet"> Dashbord</a>
   <br>
-  <span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="" >Pharmcies List </a>
+  <span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePageVet/Pharmacies" >Pharmcies List </a>
   <h2 style="color:#123C69"> Add Pharmacy Admin</h2>
   <form>
     <div class="row">
