--- a/src/app/SuperViseur/pharmacy/pharmacies/pharmacies.component.html
+++ b/src/app/SuperViseur/pharmacy/pharmacies/pharmacies.component.html
@@ -1,7 +1,7 @@
 
-<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePage"> Dashbord</a>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePageVet"> Dashbord</a>
 <h2 style="color:#123C69"> Pharmacies List  </h2>
-<button routerLink="/addPharmacy"type="button" class="btn btn-secondary" id="add2">  <span class="fa fa-plus" style="margin-right: 15px;"></span>Add New Pharmacy </button>
+<button routerLink="/HomePageVet/addPharmacy"type="button" class="btn btn-secondary" id="add2">  <span class="fa fa-plus" style="margin-right: 15px;"></span>Add New Pharmacy </button>
 <div class="input-group">
   <input type="text" id='search' class="form-control"style="width:200px; " [(ngModel)]='search' placeholder="Search by Name">
   <div class="input-group-append">
