--- a/src/app/SuperViseur/pharmacy/pharmacy.component.html
+++ b/src/app/SuperViseur/pharmacy/pharmacy.component.html
@@ -1,7 +1,7 @@
 <body>
-<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePage"> Dashbord</a>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePageVet"> Dashbord</a>
 <br>
-<span class="fa fa-arrow-left" *ngIf='show' style="color: #123C69;"></span><a *ngIf='show' routerLink="/Pharmacies" >Pharmacies List </a>
+<span class="fa fa-arrow-left" *ngIf='show' style="color: #123C69;"></span><a *ngIf='show' routerLink="/HomePageVet/Pharmacies" >Pharmacies List </a>
 <br><!--
 <div class="all2"style="float:left">
   <form id='form' style="color:#123C69" >
