--- a/src/app/SuperViseur/vets/profil-vet/profil-vet.component.html
+++ b/src/app/SuperViseur/vets/profil-vet/profil-vet.component.html
@@ -1,7 +1,7 @@
 
-<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePage"> Dashbord</a>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePageVet"> Dashbord</a>
 <br>
-<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/Vets" >Vets List </a>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePageVet/Vets" >Vets List </a>
 
 <div class="all2"*ngIf="!edite">
   <form id='form'*ngIf="!edite" style="color:#123C69" >
