--- a/src/app/SuperViseur/vets/vets.component.html
+++ b/src/app/SuperViseur/vets/vets.component.html
@@ -1,7 +1,7 @@
 
 <span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePage"> Dashbord</a>
 <h2 style="color:#123C69">Vets List  </h2>
-<button routerLink="/addVet"type="button" class="btn btn-secondary" id="add2">  <span class="fa fa-plus" style="margin-right: 15px;"></span>Add New Vet</button>
+<button routerLink="/HomePageVet/addVet"type="button" class="btn btn-secondary" id="add2">  <span class="fa fa-plus" style="margin-right: 15px;"></span>Add New Vet</button>
 <div class="input-group">
   <input type="text" id='search' class="form-control" [(ngModel)]='search' placeholder="Search by Name">
   <div class="input-group-append">
