--- a/src/app/Vet/new-rx/new-rx.component.html
+++ b/src/app/Vet/new-rx/new-rx.component.html
@@ -47,7 +47,7 @@ placeholder="Select Pet"
   Select a Pet Owner Please !
 </span>
 
-<p style ="color:#123C69; ">Need to add a new patient (pet)? &nbsp; &nbsp; <a   style="text-align: left;color:cyan ;text-decoration: underline;" *ngIf="formvalide"[routerLink]="['/NewPet/',user.id]" >Click Here</a> </p>
+<p style ="color:#123C69; ">Need to add a new patient (pet)? &nbsp; &nbsp; <a   style="text-align: left;color:cyan ;text-decoration: underline;" *ngIf="formvalide"[routerLink]="['/HomePageVet/NewPet/',user.id]" >Click Here</a> </p>
 
 </div>
 </div>
