--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,7 @@
     <router-outlet></router-outlet>
     </div>
   </div>
-  <div *ngIf="client===true">-->
-    <notifier-container></notifier-container>
+  <div >-->
       <router-outlet></router-outlet>
 
 
