--- a/src/app/client/main/main.component.html
+++ b/src/app/client/main/main.component.html
@@ -4,6 +4,8 @@
 <div class="left-nav-bar ">
   <app-menubar  ></app-menubar>
 </div>
+<notifier-container></notifier-container>
+
 <div class="page-container">
 <router-outlet></router-outlet>
 
