--- a/src/app/client/menubar/menubar.component.html
+++ b/src/app/client/menubar/menubar.component.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-<div class="logo" >
+<div class="logo" style="background-color: #d79922;">
 <a href="#">
-    <img src="assets/img/login2.png" style="height: 50px; margin-left: 35px;"/>
+    <img src="assets/img/login2.png" style="height: 56px; margin-left: 35px;"/>
 </a></div>
 <div class="leftMenu"  >
 <ul class="nav flex-column"  >
@@ -20,7 +20,7 @@
     <a class="nav-link active"routerLink="/Vets"><span class="fa fa-user-md"style="color:white E;font-size:25px "></span>&nbsp;Care Team</a>
   </li>
   <li>
-    <a class="nav-link active"routerLink="/Pharmacies"><span class="fa fa-user-cog"style="color:white E;font-size:25px "></span>&nbsp;Account Setting</a>
+    <a class="nav-link active"routerLink="/HomePageClient/profil"><span class="fa fa-user-cog"style="color:white E;font-size:25px "></span>&nbsp;Account Setting</a>
   </li>
   <li style="position: absolute;
   bottom: 0;  font-size: large">
