--- a/src/app/SuperViseur/add-pet-owner/add-pet-owner.component.html
+++ b/src/app/SuperViseur/add-pet-owner/add-pet-owner.component.html
@@ -1,8 +1,8 @@
 
 
-<span class="fa fa-arrow-left" style="color: #123C69"></span><a routerLink="/HomePage"> Dashbord</a>
+<span class="fa fa-arrow-left" style="color: #123C69"></span><a routerLink="/HomePageVet"> Dashbord</a>
 <br>
-<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/PetOwners" >PetOwner List </a>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePageVet/PetOwners" >PetOwner List </a>
 <h2 style="color:#123C69"> Add New Pet Owner</h2>
 <form>
 
