--- a/src/app/SuperViseur/pet-owners/pet-owners.component.html
+++ b/src/app/SuperViseur/pet-owners/pet-owners.component.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePage"> Dashbord</a>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePageVet"> Dashbord</a>
 <h2 style="color:#123C69;"> PetOwners List </h2>
-<button routerLink="/addPetOwner"type="button" class="btn btn-secondary" id="add2">  <span class="fa fa-plus" style="margin-right: 15px;"></span>Add New PetOwner</button>
+<button routerLink="/HomePageVet/addPetOwner"type="button" class="btn btn-secondary" id="add2">  <span class="fa fa-plus" style="margin-right: 15px;"></span>Add New PetOwner</button>
 <div class="input-group">
   <input type="text" id='search' class="form-control" [(ngModel)]='search' placeholder="Search by Name">
   <div class="input-group-append">
