--- a/src/app/SuperViseur/vets/add-new-vet/add-new-vet.component.html
+++ b/src/app/SuperViseur/vets/add-new-vet/add-new-vet.component.html
@@ -1,6 +1,6 @@
-<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePage"> Dashbord</a>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePageVet"> Dashbord</a>
 <br>
-<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/Vets" >Vets List </a>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePageVet/Vets" >Vets List </a>
 <h2 style="color:#123C69"> Add New Vet</h2>
 <form>
   <div class="row">
