--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -49,7 +49,7 @@
     <div class="card-body">
       <h4 class="card-title mb-4">
         <img src="assets/img/login2.png" style="margin-left: 20%;align-self: center;" /></h4>
-         <form #loginForm=ngForm (ngSubmit)="onSubmit()" >
+         <form #loginForm='ngForm' (ngSubmit)="onSubmit()" >
           <div class="alert alert-danger" [hidden]="!error">
             <p> {{error}}</p>
            </div>
