--- a/src/app/components/menubar/menubar.component.css
+++ b/src/app/components/menubar/menubar.component.css
@@ -1,6 +1,9 @@
 .leftMenu {
   background: #e2e2e2;
   height: 100%;
+  top:2px;
+  overflow: auto;
+  width: 100%;
 }
 /* The navigation menu links */
 .leftMenu ul a {
@@ -100,8 +103,12 @@ section{
   height:100vh;
 }
 .nav-item
-{
+{top:1px;
   height: 50px;
+}
+.nav-item .logo
+{
+  height: 67px;
 }
 
 
