--- a/src/app/client/home-page-client/home-page-client.component.html
+++ b/src/app/client/home-page-client/home-page-client.component.html
@@ -1,1 +1,1 @@
-<p>home-page-client works!</p>
+<img src='../../../assets/img/zzz.jpg' height="100%" width="100%" style="height:max-content;width: 100%;">
