--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -97,7 +97,7 @@
         <!-- form-group// -->
 
         <div class="form-group" >
-          <a routerLink="/reset" class="float-right">Forget Password ?</a>
+          <a routerLink ="/request-password" class="float-right">Forget Password ?</a>
         </div>
         <!-- form-group form-check .// -->
         <div class="form-group">
