--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -14,7 +14,7 @@
     <a class="nav-link active"routerLink="/HomePageVet/NewRX"><span class="fa fa-file-prescription" style="color:white E;font-size:25px; "></span>&nbsp;Create New Rx </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link active"routerLink="#"><span class="fa fa-folder-open" style="color:white E;font-size:25px "></span> &nbsp; Patient Rx History</a>
+    <a class="nav-link active"routerLink="/HomePageVet/orderHistory"><span class="fa fa-folder-open" style="color:white E;font-size:25px "></span> &nbsp; Patient Rx History</a>
 
   </li>
   <li class="nav-item">
