--- a/src/app/pharmacist/add-element-prescription/add-element-prescription.component.css
+++ b/src/app/pharmacist/add-element-prescription/add-element-prescription.component.css
@@ -1,3 +1,6 @@
+@import"./../../../assets/css/swiper.css";
+@import"./../../../assets/css/demo.css";
+@import "./../../../assets/css/styles";
 .addElementPrescritpionContent{
   width:1200px;
 }
