--- a/src/app/pharmacist/manage-orders/manage-orders.component.css
+++ b/src/app/pharmacist/manage-orders/manage-orders.component.css
@@ -60,3 +60,19 @@
     border: 2px solid #123C69;
     color: #123C69;
   }
+  .ngx-pagination {
+    padding-left: 0px !important;
+  }
+
+  .ngx-pagination .current,
+  .btn-info {
+    background:red !important;
+    border: transparent !important;
+    border-radius: 20px !important;
+  }
+
+  .ngx-pagination .current:hover {
+    background: #cccc !important;
+    border-radius: 20px !important;
+    border: transparent !important;
+  }
