--- a/src/app/pharmacist/dashbored/dashbored.component.css
+++ b/src/app/pharmacist/dashbored/dashbored.component.css
@@ -1,10 +1,12 @@
-
+@import"./../../../assets/css/swiper.css";
+@import"./../../../assets/css/demo.css";
+@import "./../../../assets/css/styles";
 .sidnavContent{
   position:absolute;
   top: 0;
   left: -300;
   display:none;
-  width:300px;
+  width:20vw
 }
 .content{
   margin-left: 19%;
@@ -55,4 +57,7 @@
 
 .content,.footerContent{
   padding-bottom: 100px;
+}
+.topNavContent{
+
 }
