--- a/src/app/client/menubar/menubar.component.html
+++ b/src/app/client/menubar/menubar.component.html
@@ -17,7 +17,7 @@
   </li>
 
   <li class="nav-item">
-    <a class="nav-link active"routerLink="/Vets"><span class="fa fa-user-md"style="color:white E;font-size:25px "></span>&nbsp;Care Team</a>
+    <a class="nav-link active"routerLink="#"><span class="fa fa-user-md"style="color:white E;font-size:25px "></span>&nbsp;Care Team</a>
   </li>
   <li>
     <a class="nav-link active"routerLink="/HomePageClient/profil"><span class="fa fa-user-cog"style="color:white E;font-size:25px "></span>&nbsp;Account Setting</a>
