--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -36,7 +36,10 @@
     <a class="nav-link active"routerLink="/HomePageVet/Pharmacies"><span class="fa fa-capsules"style="color:white E;font-size:25px "></span>&nbsp;Pharmacy </a>
   </li>
 
-
+  <li style="position: absolute;
+  bottom: 0;  font-size: large">
+    <a class="nav-link active"(click)='logout($event)'><span class="fa fa-power-off"style="color:white E;font-size:25px "></span>&nbsp;Sign out </a>
+  </li>
 </ul>
 </div>
 
