--- a/src/app/Vet/rx-history/rx-history.component.css
+++ b/src/app/Vet/rx-history/rx-history.component.css
@@ -82,3 +82,19 @@
 	width: 0;
 	height: 0;
 }
+.ngx-pagination {
+  padding-left: 0px !important;
+}
+
+.ngx-pagination .current,
+.btn-info {
+  background:red !important;
+  border: transparent !important;
+  border-radius: 20px !important;
+}
+
+.ngx-pagination .current:hover {
+  background: #cccc !important;
+  border-radius: 20px !important;
+  border: transparent !important;
+}
