--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -15,7 +15,7 @@
                        <span class="badge badge-info" style="background-color :red;">{{countNotif}}</span>  </a>
 
                      <div class="dropdown-menu dropdown-menu-right dropdown-cyan"style="overflow: auto;max-height: 200px; height: auto;" aria-labelledby="navbarDropdownMenuLink-4">
-                         <a class="dropdown-item" href="#"*ngFor="let notif of noti|orderBy:order">{{notif.statusName}} in the {{notif.RxOrderDate}} </a>
+                         <a class="dropdown-item" href="#"*ngFor="let notif of noti|orderBy:order:true">{{notif.statusName}} in the {{notif.RxOrderDate}} </a>
                      </div>
 
                  </li>
